<resources>
    <string name="app_name">HomeWork2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="enter_your_name">Enter your Name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="cheese">Cheese</string>
    <string name="cheese_2x">2 x Cheese</string>
    <string name="none">None</string>
    <string name="square">Square</string>
    <string name="round_pizza">Round Pizza</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="veggies">Veggies</string>
    <string name="anchovies">Anchovies</string>
    <string name="order_button">SMS - Place your order</string>

    <string name="price">Price:</string>

    <string name="name_error_msg">Name not specified</string>
    <string name="phone_error_msg">Phone not specified</string>

    <string name="order_success">Your order SUCCESS</string>

    <string name="cheese_p">2</string>
    <string name="cheese_2x_p">2.5</string>
    <string name="none_p">0</string>
    <string name="square_p">6</string>
    <string name="round_pizza_p">6</string>
    <string name="pepperoni_p">3</string>
    <string name="mushrooms_p">2</string>
    <string name="veggies_p">2</string>
    <string name="anchovies_p">2.5</string>

</resources>
