<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_your_name"/>
        <EditText
            android:id="@+id/phone_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/your_phone_number"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/cheese"
                android:onClick="on_change_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cheese"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/cheese_2x"
                android:onClick="on_change_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cheese_2x"/>
            <RadioButton
                android:id="@+id/none"
                android:onClick="on_change_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/none"/>
        </RadioGroup>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/square"
                android:onClick="on_change_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/square"/>
            <RadioButton
                android:id="@+id/round_pizza"
                android:onClick="on_change_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/round_pizza"
                android:checked="true"/>
        </RadioGroup>

        <CheckBox
            android:id="@+id/pepperoni"
            android:onClick="on_change_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pepperoni"/>
        <CheckBox
            android:id="@+id/mushrooms"
            android:onClick="on_change_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mushrooms"/>
        <CheckBox
            android:id="@+id/veggies"
            android:onClick="on_change_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/veggies"/>
        <CheckBox
            android:id="@+id/anchovies"
            android:onClick="on_change_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/anchovies"/>

        <TextView
            android:id="@+id/price_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/price"/>

        <Button
            android:onClick="on_order_click"
            android:layout_width="@dimen/order_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order_button"/>

    </LinearLayout>
</ScrollView>
